--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <link href="styles/style.css" rel="stylesheet" type="text/css">
   </head>
   <body>
+    <sctipt>
+      
+    </script>
     <h1>テクノロジーw3</h1>
     <img src="images/firefox-icon.png" alt="The Firefox logo: a flaming fox surrounding the Earth.">
 
