--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <sctipt>
-      
+      console.log('hello')
     </script>
     <h1>テクノロジーw3</h1>
     <img src="images/firefox-icon.png" alt="The Firefox logo: a flaming fox surrounding the Earth.">
